@@ -11,6 +11,13 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <!-- NetBeans 22+ requires JDK 17+ -->
+        <maven.compiler.release>17</maven.compiler.release>
+        <jpms-flags>
+            -Djava.security.manager=allow
+            --add-opens=java.base/java.net=ALL-UNNAMED
+            <!-- add more "add opens" if needed -->
+        </jpms-flags>
     </properties>
 
     <dependencies>
@@ -23,27 +30,33 @@
 
     <build>
         <plugins>
+
             <plugin>
                 <groupId>org.apache.netbeans.utilities</groupId>
                 <artifactId>nbm-maven-plugin</artifactId>
-                <version>4.8</version>
+                <version>14.1</version>
                 <extensions>true</extensions>
             </plugin>
 
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.11.0</version>
+                <version>3.13.0</version>
+            </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.3.0</version>
                 <configuration>
-                    <source>1.8</source>
-                    <target>1.8</target>
+                    <argLine>${jpms-flags}</argLine>
                 </configuration>
             </plugin>
 
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
-                <version>3.3.0</version>
+                <version>3.4.2</version>
                 <configuration>
                     <!-- to have the jar plugin pickup the nbm generated manifest -->
                     <archive>
@@ -51,6 +64,7 @@
                     </archive>
                 </configuration>
             </plugin>
+
         </plugins>
     </build>
 </project>
